--- a/ezBayWeb/WebRoot/test.html
+++ b/ezBayWeb/WebRoot/test.html
@@ -2,15 +2,10 @@
 <body>
 <p>
 Les tests ...
-	<br/>
-	<form action="TestServlet" method="get" name="youTypeItForm">
-		<input type="text" name="suite" size=60 />
-		<input type="submit" value="Run" />
-	</form>
 </p>
 <hr/>
 <p>
-	You may pick one or more of the following test suites:
+	Choisissez une ou plusieurs classe(s) de test:
 	<br/>
 	<form action="TestServlet" name="youPickItForm">
 		<select name="suite" multiple>
