*** empty log message ***

--- a/ezBayWeb/WebRoot/test.html
+++ b/ezBayWeb/WebRoot/test.html
@@ -5,7 +5,8 @@ Les tests ...
 </p>
 <hr/>
 <p>
-	Choisissez une ou plusieurs classe(s) de test:
+	Choisissez une ou plusieurs classe(s) de test.<br />
+	Cliquez sur "Run" pour démarrer les tests :
 	<br/>
 	<form action="TestServlet" name="youPickItForm">
 		<select name="suite" multiple>
