*** empty log message ***

--- a/ezBayWeb/WebRoot/test.html
+++ b/ezBayWeb/WebRoot/test.html
@@ -22,6 +22,9 @@ Les tests ...
 			<option value="axlomoso.ezbay.test.MembreFacadeTest">
 				axlomoso.ezbay.test.MembreFacadeTest
 			</option>
+			<option value="axlomoso.ezbay.test.ClientFacadeTest">
+				axlomoso.ezbay.test.ClientFacadeTest
+			</option>
 		</select>
 		<input type="submit" value="Run" />
 	</form>
