*** empty log message ***

--- a/ezBayWeb/WebRoot/test.html
+++ b/ezBayWeb/WebRoot/test.html
@@ -6,7 +6,7 @@ Les tests ...
 <hr/>
 <p>
 	Choisissez une ou plusieurs classe(s) de test.<br />
-	Cliquez sur "Run" pour démarrer les tests :
+	Cliquez sur "Run" pour d&eacute;marrer les tests :
 	<br/>
 	<form action="TestServlet" name="youPickItForm">
 		<select name="suite" multiple>
@@ -25,12 +25,16 @@ Les tests ...
 			<option value="axlomoso.ezbay.test.ClientFacadeTest">
 				axlomoso.ezbay.test.ClientFacadeTest
 			</option>
+			<option value="axlomoso.ezbay.test.ActionEnchereFacadeTest">
+				axlomoso.ezbay.test.ActionEnchereFacadeTest
+			</option>
+			<option value="axlomoso.ezbay.test.ActionTransactionFacadeTest">
+				axlomoso.ezbay.test.ActionTransactionFacadeTest
+			</option>	
 		</select>
+		<br/>
 		<input type="submit" value="Run" />
 	</form>
-	
-	
-	
 </p>
 </body>
 </html>
